tools/crates/vendor/toml_edit/tests/fixtures/invalid/float/inf_underscore.stderr
TOML parse error at line 1, column 18
  |
1 | inf_underscore = in_f
  |                  ^
invalid string
expected `"`, `'`
